Catching error when user inputs a non valid search and showing it in the UI. Changed localizador search button hover state, gmaps theme styles and added new feature to search with just hit enter

--- a/wp-content/themes/calidra/assets/css/scss/mixins.scss
+++ b/wp-content/themes/calidra/assets/css/scss/mixins.scss
@@ -8,7 +8,7 @@
         @content;
     }
 }
-@mixin standardButton($bg-color, $font-color) {
+@mixin standardButton($bg-color, $font-color, $hover-scale) {
     color: $font-color;
     border: none;
     background-color: $bg-color;
@@ -26,7 +26,7 @@
     }
     &:hover{
         color: $bg-color;
-        transform: scale(1.1);
+        transform: scale($hover-scale);
         background-color: $font-color;
     }
 }
