--- a/wp-content/themes/calidra/assets/css/style.scss
+++ b/wp-content/themes/calidra/assets/css/style.scss
@@ -215,7 +215,7 @@ footer{
             }
         }
         .hero-cta{
-            @include standardButton(#ffffff, #000000);
+            @include standardButton(#ffffff, #000000, 1.1);
             margin-top: 50px;
         }
     }
@@ -468,7 +468,7 @@ footer{
             }
         }
         .contacto-cta{
-            @include standardButton($calidra-red, #ffffff);
+            @include standardButton($calidra-red, #ffffff, 1.1);
             margin-top: 50px;
         }
     }
@@ -1258,6 +1258,8 @@ footer{
         }
         &-input{
             display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
             input[type='text']{
                 padding: 10px 15px;
                 color: $grey;
@@ -1273,11 +1275,19 @@ footer{
                 }
             }
             button{
-                @include standardButton($calidra-red, #ffffff);
+                @include standardButton($calidra-red, #ffffff, 1);
                 display: inline-block;
                 width: 20%;
                 height: 50px;
                 padding: 0;
+            }
+            .error{
+                @include fontLine(1.1rem, 1.4rem);
+                color: $calidra-red;
+                font-weight: bold;
+                display: none;
+                width: 100%;
+                margin: 0;
             }
         }
     }
@@ -1317,7 +1327,6 @@ footer{
             padding: 60px 15px 30px;
             position: relative;
             transition: opacity 400ms ease-in-out;
-            display: none;
             @include minWidth($lg){
                 padding: 30px 0 75px;
             }
@@ -1690,7 +1699,7 @@ footer{
         //     }
         // }
         button{
-            @include standardButton($calidra-red, #ffffff);
+            @include standardButton($calidra-red, #ffffff, 1.1);
             margin: 50px 0;
         }
     }
@@ -1717,7 +1726,7 @@ footer{
         }
     }
     button{
-        @include standardButton($ultra-dark-grey, #ffffff);
+        @include standardButton($ultra-dark-grey, #ffffff, 1.1);
     }
 }
 .template-videos{
