Forced hover state on localizador enviar button to overrwite the mixin hover state

--- a/wp-content/themes/calidra/assets/css/scss/variables.scss
+++ b/wp-content/themes/calidra/assets/css/scss/variables.scss
@@ -8,6 +8,7 @@ $grey: #3e3e3e;
 $dark-grey: #2c2c2c;
 $ultra-dark-grey: #202020;
 $calidra-red: #ed1d24;
+$calidra-red-dark: #6a0c0f;
 
 //Sombras
 $outter-shadow: 1px 1px 8px rgba(0, 0, 0, 0.65);
