--- a/wp-content/themes/calidra/assets/css/style.css
+++ b/wp-content/themes/calidra/assets/css/style.css
@@ -2066,6 +2066,11 @@ footer .footer-bottom-border {
   background-color: #ffffff;
 }
 
+.localizador-buscador-input button:hover {
+  color: #ffffff;
+  background-color: #6a0c0f;
+}
+
 .localizador-buscador-input .error {
   font-size: 1.1rem;
   line-height: 1.4rem;
