Fixed slider bugs where more items than needed were being render by library and if not enough products the slider got broken

--- a/wp-content/themes/calidra/assets/css/style.css
+++ b/wp-content/themes/calidra/assets/css/style.css
@@ -1939,6 +1939,12 @@ footer .footer-bottom-border {
   }
 }
 
+.seccion-template-productos-prods {
+  width: 1200px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
 .seccion-template-productos-prods-carousel {
   width: 1200px;
   max-width: 100%;
